# clean-pvnet

./: .gitignore  README.md  my_try_dataset.py  my_try_network.py  requirements.txt  train_net.py
configs/: epnet_linemod.yaml  linemod.yaml
lib/config/: config.py
lib/csrc/edge_refine/: CMakeLists.txt  edge_refine_utils.py  test.py
lib/csrc/edge_refine/examples/: CMakeLists.txt  edge_refine.cpp  evaluate_rbot_dataset.cpp  example.cpp  pybind11  rbot_evaluator.cpp  understanding_model.cpp
lib/csrc/edge_refine/include/srt3d/: body.h  camera.h  common.h  loader_camera.h  occlusion_renderer.h  renderer_geometry.h  viewer.h
lib/csrc/edge_refine/src/: region_modality.cpp  renderer_geometry.cpp  tracker.cpp
lib/csrc/ransac_voting/: ransac_voting_gpu.py
lib/datasets/: augmentation.py  dataset_catalog.py  make_dataset.py  transforms.py
lib/datasets/linemod/: epnet.py  linemod_to_coco.py  pvnet.py
lib/evaluators/linemod/: epnet.py
lib/networks/epnet/: __init__.py  resnet18.py
lib/train/trainers/: epnet.py
lib/utils/pvnet/: pvnet_data_utils.py  visualize_utils.py
